--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -176,7 +176,7 @@ body.info {
 }
 
 .language a {
-    color: #e22661;
+    color: #c70036;
     text-decoration: none;
 }
 
@@ -217,7 +217,7 @@ body > img {
 #menu-button {
     cursor: pointer;
     font-size: 2rem;
-    color: #e22661;
+    color: #c70036;
     float: right;
     margin-top: 5px;
     margin-right: 16px;
@@ -231,7 +231,7 @@ body > img {
     font-size: 1.2rem;
     padding: 8px 18px 9px;
     text-decoration: none;
-    background-color: #f181ad;
+    background-color: #c70036;
     border-bottom: 1px solid rgba(255, 255, 255, .25);
 }
 
@@ -335,7 +335,7 @@ a.medium {
 
 .header {
     background-color: #fff;
-    border-bottom: 1px solid #f181ad;
+    border-bottom: 1px solid #c70036;
     position: fixed;
     right: 0;
     text-align: center;
@@ -422,7 +422,7 @@ a.medium {
     position: absolute;
     width: 100%;
     height: 1px;
-    background: #f181ad;
+    background: #c70036;
     content: "";
     bottom: 0;
     left: 171px;
@@ -454,7 +454,7 @@ a.medium {
 #chat-container li .mute, #chat-container li .ban {
     background: none;
     border: 0;
-    color: #f181ad;
+    color: #c70036;
     display: block;
     font-size: 0.7rem;
     margin: 0;
@@ -540,7 +540,7 @@ ul li.on {
     width: 100%;
     height: 51px;
     padding: 0;
-    background-color: #f181ad;
+    background-color: #c70036;
 }
 
 #videoHolder {
