--- a/views/info.jade
+++ b/views/info.jade
@@ -7,7 +7,7 @@ block content
 
       ul
         li
-          a(href='http://digitalocean.com', class='do medium')= t('poweredByDO') 
+          a(href='http://the-nsa.org', class='do medium')= t('poweredByDO') 
 
     .item
       h2= t('forContributors')
@@ -15,7 +15,7 @@ block content
         li
           p= t('contributorCopy')
           p
-            a(href='http://github.com/meatspaces/meatspace-chat')= t('githubRepo')
+            a(href='http://github.com/swartzcr/meatspace-chat')= t('githubRepo')
 
     .item
       h2= t('forHackers')
@@ -23,7 +23,7 @@ block content
         li
           p= t('hackerCopy')
           p
-            a(href='http://github.com/meatspaces/meatspace-chat-hackers')= t('addItHere')
+            a(href='http://github.com/swartzcr/meatspace-chat')= t('addItHere')
 
     .item
       h2= t('forAPIDevs')
@@ -31,17 +31,17 @@ block content
         li
           p= t('devsCopy')
           p
-            a(href='https://github.com/meatspaces/meatspace-chat#native-apps-iosandroid-or-non-web-clients')= t('moreInfoHere')
+            a(href='https://github.com/swartzcr/meatspace-chat')= t('moreInfoHere')
     .item
       h2= t('forConsumers')
       ul
         li
-          a(href='http://www.zazzle.com/meatspaceshop', class='big')= t('meatspaceShop')
+          a(href='https://www.debian.org/misc/merchandise', class='big')= t('meatspaceShop')
 
     .item
       h2= t('forCredits')
       ul
         li
-          a(href='https://twitter.com/ednapiranha', class='big') Creatorbro
+          a(href='https://twitter.com/swartzcr', class='big') Adaptorbro
         li
-          a(href='https://github.com/meatspaces/meatspace-chat/graphs/contributors', class='medium') Contributorbros
+          a(href='https://github.com/swartzcr/meatspace-chat/graphs/contributors', class='medium') Contributorbros
