changed links in menu

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,9 +27,7 @@ html
           li
             a#switch-camera(href='javascript:;')= t('switchCamera')
           li
-            a(href='https://chat.meatspac.es') international
-          li
-            a(href='https://fr.meatspac.es') en français
+            a(href='https://meatspace.debian.net') international
           if session.authenticated
             li
               a(href='/logout') Log out
